--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,21 @@
 
 body {
   margin: 0;
-	background: none;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+@layer base {
+	body {
+		@apply bg-white dark:bg-gray-800;
+	}
+
+	p {
+		@apply text-gray-800 dark:text-gray-400 font-medium;
+	}
 }
 
 code {
